Updates to content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>example website</title>
+    <title>boost ventilator consulting</title>
 
     <style type="text/css">
     div {
@@ -37,8 +37,10 @@
 
 <body bgcolor="#f3f3f3">
 <div>
-    <h1>example website</h1>
-    <p>hello! here is an example website!</p>
-</div>
+    <h1>Boost Ventilator Consulting</h1>
+    <h2>Halifax, Nova Scotia, Canada</h2>
+        <p>Technological research, design, development, support, and management.</p>
+    <h3>Contact: <a href="https://iain.ca">Iain K. MacLeod</a></h3>
+    </div>
 </body>
 </html>
