--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
         }
     }
     </style>    
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M873R37QF0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-M873R37QF0');
+    </script>
+    
 </head>
 
 <body bgcolor="#f3f3f3">
