--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body bgcolor="#f3f3f3">
 <div>
     <h1>Boost Ventilator Consulting</h1>
-    <h2>Halifax, Nova Scotia, Canada</h2>
+    <h2>Dartmouth, Nova Scotia, Canada</h2>
         <p>Technological research, design, development, support, and management.</p>
     <h3>Contact: <a href="https://iain.ca">Iain K. MacLeod</a></h3>
     </div>
