--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h2>Dartmouth, Nova Scotia, Canada</h2>
         <p>Technological research, design, development, support, and management.</p>
     <h3>Contact: <a href="https://iain.ca">Iain K. MacLeod</a></h3>
-    <h4><a class="u-url" href="https://xoxo.zone/@boostventilator" rel="me">@boostventilator@xoxo.zone</a></h4>
-    </div>
+    <h4>Mastodon:<a rel="me" href="https://xoxo.zone/@boostventilator">@boostventilator@xoxo.zone</a>
+            </div>
 </body>
 </html>
