--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     @media (max-width: 700px) {
         body {
             background-color: #fff;
+            font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+            font-weight: 300;
         }
         div {
             width: auto;
