--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         <p>Technological research, design, development, support, and management.</p>
     <h3>Contact: <a href="https://iain.ca">Iain K. MacLeod</a></h3>
     <h4>Mastodon:<a rel="me" href="https://xoxo.zone/@boostventilator">@boostventilator@xoxo.zone</a>
+    <h4>Bluesky:<a rel="me" href="https://bsky.app/profile/iain.ca">@iain.ca</a>
+    <h4>Threads:<a rel="me" href="https://www.threads.net/@boostventilator">@boostventilator@threads.net</a>
+
+        
 </div>
         
 </body>
