--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             border-radius: 0;
             padding: 1em;
         }
+        h1,h2,h3,h4,p {
+            font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+        }
     }
     </style>    
     
