--- a/index.html
+++ b/index.html
@@ -58,13 +58,16 @@
 
 <div>
     <h1>Boost Ventilator Consulting</h1>
-    <h2>Dartmouth, Nova Scotia, Canada</h2>
+    <h2>🏭 Dartmouth, 🦞 Nova Scotia, 🍁 Canada</h2>
+        <blockquote>Making people breathe easier online since 2007</blockquote>
         <p>Technological research, design, development, support, and management.</p>
-    <h3>Contact: <a href="https://iain.ca">Iain K. MacLeod</a></h3>
-    <h4>Mastodon:<a rel="me" href="https://xoxo.zone/@boostventilator">@boostventilator@xoxo.zone</a>
-    <h4>Bluesky:<a rel="me" href="https://bsky.app/profile/iain.ca">@iain.ca</a>
-    <h4>Threads:<a rel="me" href="https://www.threads.net/@boostventilator">@boostventilator@threads.net</a>
-
+    <h3>Contact Me: <a href="https://iain.ca">Iain K. MacLeod</a></h3>
+    <h4>By Email:<a rel="me" href="mailto:imac@boostventilator.com">imac@boostventilator.com</a>
+    <h4>On Mastodon:<a rel="me" href="https://xoxo.zone/@boostventilator">@boostventilator@xoxo.zone</a>
+    <h4>On Bluesky:<a rel="me" href="https://bsky.app/profile/iain.ca">@iain.ca</a>
+    <h4>On Threads:<a rel="me" href="https://www.threads.net/@boostventilator">@boostventilator@threads.net</a>
+    <h4>On Instagram:<a rel="me" href="https://www.instagram.com/boostventilator">@boostventilator</a>
+        <p><small>ß∞$† √∑π†!£@ 0®</small></p>
         
 </div>
         
